--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/container.css">
-    <link rel="stylesheet" href="CSS/flex.css"> 
+    <link rel="stylesheet" href="CSS/flex.css">
     <script defer src="JS/script.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <div class="flex">
-            <div class="flex__item">1</div>
-            <div class="flex__item">2</div>
-        </div>
+        <div class="container__item">1</div>
+        <div class="container__item">2</div>
+        <div class="container__item">3</div>
+        <div class="container__item">4</div>
+        <div class="container__item">5</div>
+        <div class="container__item">6</div>
+        <div class="container__item">7</div>
+        <div class="container__item container__item--last">8</div>
+
     </div>
 
 
